# typst-matryoshka

./: .gitignore  .lib.typ.swp  .pre-commit-config.yaml  Cargo.toml  README.md  lib.typ  pixi.toml  test.typ  typst.toml
.github/workflows/: ci.yml
doc/: matryoshka.typ
src/: font.rs  io.rs  lib.rs  world.rs
tests/: template.typ
tests/features/basic/: test.typ
tests/features/dont-fail/: test.typ
tests/features/filesystem/: test.typ
